# KWayMerge

./: CMakeLists.txt  example.cpp  merge.h
benchmarks/: CMakeLists.txt
benchmarks/sequential/: random.cpp
include/: merge.h
include/detail/: first_round_merge.h  get_container_size.h  iterative_merge.h
include/detail/OpenMP/: first_round_merge.h  iterative_merge.h
include/detail/std/: first_round_merge.h
tests/: CMakeLists.txt
tests/include/: catch.hpp  define.hpp  helpers.hpp
tests/sequential/core/: comparisons.cpp  small.cpp
tests/validity/core/: comparisons.cpp  data_structure.cpp  empty.cpp  small.cpp
